[tool.poetry]
name = "vta-rag"
version = "0.1.0"
description = ""
authors = ["John-Henry Lim <42513874+Interpause@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "0.10.1"
fastapi = { extras = ["all"], version = "^0.109.1" }
chromadb = "^0.4.22"
transformers = "^4.37.2"
torch = "^2.2.0"
llama-index-vector-stores-chroma = "^0.1.1"
llama-index-embeddings-huggingface = "^0.1.1"
llama-index-vector-stores-mongodb = "^0.1.2"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
poethepoet = "^0.24.4"

[tool.poe.tasks]
dev = "python main.py"
prod = "gunicorn -k uvicorn.workers.UvicornWorker -b 0.0.0.0:3000 vta_rag:app"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
